work in progress

--- a/src/ReleaseFlowProposalReferences.bib
+++ b/src/ReleaseFlowProposalReferences.bib
@@ -42,6 +42,41 @@
     year = {2022}
 }
 
+@MISC{AdoptGitStrategy,
+    author = {Microsoft documentation},
+    title = {{Adopt a Git branching strategy}},
+    howpublished = {Available electronically at \url {https://learn.microsoft.com/en-us/azure/devops/repos/git/git-branching-guidance?view=azure-devops}},
+    year = {2022}
+}
+
+@MISC{MainlineDevelopment,
+    author = {GitVersion docs},
+    title = {{Mainline Development}},
+    howpublished = {Available electronically at \url {https://gitversion.net/docs/reference/modes/mainline}},
+    year = {2023}
+}
+
+@MISC{SemanticVersioning,
+    author = {Semantic Versioning docs},
+    title = {{Semantic Versioning 2.0.0}},
+    howpublished = {Available electronically at \url {https://semver.org/}},
+    year = {2023}
+}
+
+@MISC{AzurePipelinesTriggers,
+    author = {Microsoft documentation},
+    title = {{Build Azure Repos Git or TFS Git repositories}},
+    howpublished = {Available electronically at \url {https://learn.microsoft.com/en-us/azure/devops/pipelines/repos/azure-repos-git?view=azure-devops&tabs=yaml}},
+    year = {2023}
+}
+
+@MISC{GitLabFlow,
+    author = {GitLab docs},
+    title = {{Introduction to GitLab Flow}},
+    howpublished = {Available electronically at \url {https://docs.gitlab.com/ee/topics/gitlab_flow.html}},
+    year = {2023}
+}
+
 @MISC{Sloane_theencyclopedia,
     author = {N. J. A. Sloane},
     title = {The On-Line Encyclopedia of Integer Sequences},
