--- a/src/sections/conclusions.tex
+++ b/src/sections/conclusions.tex
@@ -1,1 +1,8 @@
-Conclusions of your manuscript.
+In this document software product release process is proposed and discussed.
+Few useful GIT commands worth to remember:
+\begin{itemize}
+    \item \texttt{git tag -a v0.1.0 -m "my version 0.1.0"}
+    \item \texttt{git tag -d <tag\_name>}
+    \item \texttt{git push origin <tag\_name>}
+    \item \texttt{git push --delete origin <tag\_name>}
+\end{itemize}
