--- a/src/ReleaseFlowProposal.tex
+++ b/src/ReleaseFlowProposal.tex
@@ -9,8 +9,8 @@
 \usepackage[font=small,labelfont=bf]{caption}
 \usepackage[left=1in,right=1in,bottom=1in,top=1in]{geometry}
 \usepackage[pdfpagelabels,hyperindex,colorlinks=true,linkcolor=blue,urlcolor=magenta,citecolor=green]{hyperref}
-\usepackage{setspace}
-\onehalfspacing
+\usepackage{graphicx}
+\linespread{1.7}
 \emergencystretch=1em
 
 \newtheorem{thm}{Theorem}[section]
