--- a/src/ReleaseFlowProposalReferences.bib
+++ b/src/ReleaseFlowProposalReferences.bib
@@ -77,6 +77,13 @@
     year = {2023}
 }
 
+@MISC{CherryPick,
+    author = {Atlasian docs},
+    title = {{Git Cherry Pick}},
+    howpublished = {Available electronically at \url {https://www.atlassian.com/git/tutorials/cherry-pick}},
+    year = {2023}
+}
+
 @MISC{Sloane_theencyclopedia,
     author = {N. J. A. Sloane},
     title = {The On-Line Encyclopedia of Integer Sequences},
