--- a/src/sections/introduction.tex
+++ b/src/sections/introduction.tex
@@ -11,55 +11,63 @@ Below picture shows main idea of GitHub flow itself
     ~\caption{GitHub Flow diagram.}
 \end{figure}
 \begin{itemize}
-    \item \textbf{Master} -- is the branch we release code from and then deploy it to various environments like
-    DEV, QA or UAT. Each state of master branch is deployable.
-    \item \textbf{Feature} -- feature branch that created to implement new feature according to sprint plan.
-    Feature branch is branched from the master's HEAD\@.
-    \item \textbf{Bugfix} -- same as feature branch in general, branched out of master's HEAD and contains not critical bug fix.
-    \item \textbf{Release/v*} -- branched from master and ready to be released, CD pipeline itself is triggered
-    by push tag event from this branch.
-    It is long-living branch used to support particular release.
-    \item \textbf{Hotfix} -- branch is created from the latest deployed unit where error occurs,
-    for example \texttt{release/v*} branch.
-    Hotfixes are not stick to releases, they may be necessary in any deployed unit like DEV, QA environments,
-    depends on where error occurs.
-    This branch contains hotfix that should be deployed as soon as possible.
-    In case of hotfix branch, release to be done directly from it.
-    It means that after hotfix is finished new tag with patch increment to be created and pushed,
-    triggering CI/CD and deployment of hotfix to production.
+    \item \textbf{Master} -- branch that contains tested, validated and verified code, ready to be released.
+    \item \textbf{Feature} -- branch that contains implementation of new feature according to sprint plan.
+    Feature is branched from the \texttt{master} HEAD\@.
+    \item \textbf{Bugfix} -- branch that contains non-critical bug fix.
+    Bugfix is branched from the \texttt{master} HEAD\@.
+    \item \textbf{Release/v*} -- branch that contains upcoming release state of software product.
+    Release engineer decides what commit to be base of release branch.
+    \texttt{Release/v*} is branched from the \texttt{master}.
+    \texttt{Release/v*} is considered to be long-living branch, it should not be deleted after code is deployed.
+    \texttt{Release/v*} branch is used to support current release of software product, after new release occurs
+    team decides whereas to keep or to delete old release branch.
+    After release complete \texttt{master} branch cherry-picks~\cite{CherryPick} from it.
+    \item \textbf{Hotfix} -- branch that contains critical bug fix.
+    It is used to patch production environment and must be released as quick as possible.
+%    \item \textbf{Hotfix} -- branch is created from the latest deployed unit where error occurs,
+%    for example \texttt{release/v*} branch.
+%    Hotfixes are not stick to releases, they may be necessary in any deployed unit like DEV, QA environments,
+%    depends on where error occurs.
+%    This branch contains hotfix that should be deployed as soon as possible.
+%    In case of hotfix branch, release to be done directly from it.
+%    It means that after hotfix is finished new tag with patch increment to be created and pushed,
+%    triggering CI/CD and deployment of hotfix to production.
 \end{itemize}
 
 \subsection{Release process}
-Having all above, assume we have current initial semantic version on our main branch as \texttt{v0.1.0},
+Having all above, assume we have initial semantic version on our \texttt{master} branch as \texttt{v0.1.1},
 and we must release upcoming version, our steps to perform are:
 \begin{enumerate}
-    \item Create pull request from recent \texttt{feature} branch to \texttt{master} branch, this pull request triggers
-    Continuous Integration (CI) to start, CI runs tests, code quality checks etc.,
+    \item Software engineer creates pull request from recent \texttt{feature} branch to \texttt{master} branch,
+    this pull request triggers Continuous Integration (CI) to start, CI runs tests, code quality checks etc.,
     but deployment won't be started yet, only CI\@.
-    \item After all checks passed, pull request reviewed by team and every comment from code review is fixed -- pull
-    request to be merged from \texttt{feature} branch to \texttt{master} branch.
+    \item After all CI checks passed, pull request reviewed by team and every comment from code review is fixed --
+    it is ready to be merged from \texttt{feature} branch to \texttt{master} branch.
     No CI/CD pipeline triggered by the merge.
-    \item Next, responsible person reviews changes
-    (using change log or git compare, it doesn't matter, but change log is preferable solution),
-    responsible person makes decision which part of semantic version to increment and then creates
-    and pushes tag to remote repository respectively.
-    For example, it is decided that minor version should be incremented then our version becomes
-    \texttt{v0.1.0 -> v0.2.0}, so responsible person creates release as follows:
+    \item Next, release engineer reviews software product changes using \texttt{CHANGELOG} or \texttt{git compare}.
+    Release engineer makes decision which part of semantic version to increment.
+    For example, release engineer decided that minor version should be incremented then our version becomes,
+    for example \texttt{v0.1.1 -> v0.2.0}
+    \item Release engineer creates new release as follows
     \begin{itemize}
-        \item Checkout to branch \texttt{release/v0.2.0} from Master
-        \item \texttt{git push origin release/v0.2.0}
-        \item \texttt{git tag -a v0.2.0 -m "Release v0.2.0"}
-        \item \texttt{git push origin v0.2.0}
+        \item Checkout to release branch: \texttt{git checkout -b release/v0.2.0}
+        \item Work on release committing some minor fixes
+        \item Push release branch to remote: \texttt{git push origin release/v0.2.0}
+        \item Create tag: \texttt{git tag -a v0.2.0 -m "Release v0.2.0"}
+        \item Push tag: \texttt{git push origin v0.2.0}
     \end{itemize}
-    \item After that CI/CD pipeline is triggered by tag push event~\cite{AzurePipelinesTriggers},
-    after build there are three deployments scheduled: DEV, QA, UAT\@.
+    \item After new tag is pushed the CI/CD pipeline is triggered by that event~\cite{AzurePipelinesTriggers}.
+    There are three deployments scheduled: DEV, QA, UAT\@.
     Environments QA and UAT are to be approved by designated personnel before deployment starts,
     DEV to be deployed without manual approve.
-    \item Finally, \texttt{master} branch cherry-picks from \texttt{release/v0.2.0} after deployment is complete.
+    \item Finally, \texttt{master} branch cherry-picks~\cite{CherryPick} from \texttt{release/v0.2.0} after deployment is complete.
 \end{enumerate}
-Entire process is shown on picture below
+Entire release process is shown on the picture below
 \begin{figure}[H]
     \centering
     \includegraphics[width=1\textwidth]{../img/GitLab_Flow}
     ~\caption{GitLab Flow diagram~\cite{GitLabFlow}.}
 \end{figure}
+
+\subsection{Hotfix strategy}
