work in progress

--- a/src/ReleaseFlowProposal.tex
+++ b/src/ReleaseFlowProposal.tex
@@ -69,7 +69,7 @@
 }
 \begin{document}
     \begin{abstract}
-        \input{sections/abstract.tex}
+        \input{sections/abstract}
     \end{abstract}
 
     \maketitle
@@ -78,13 +78,13 @@
 
 
     \section{Introduction} \label{sec:introduction}
-    \input{sections/introduction.tex}
+    \input{sections/introduction}
 
 
     \section{Conclusions}\label{sec:conclusions}
-    \input{sections/conclusions.tex}
+    \input{sections/conclusions}
 
     \bibliographystyle{unsrt}
-    \bibliography{ReleaseFlowProposalReferences}
+    \bibliography{ReleaseFlowProposal}
 
 \end{document}
