--- a/src/sections/introduction.tex
+++ b/src/sections/introduction.tex
@@ -7,7 +7,7 @@ Current document is motivated by Microsoft's ''Adopt a Git branching strategy'',
 Below picture shows main idea of GitHub flow itself
 \begin{figure}[H]
     \centering
-    \includegraphics[width=1\textwidth]{../img/GitHub_Flow}
+    \includegraphics[width=1\textwidth]{img/GitHub_Flow}
     ~\caption{GitHub Flow diagram.}
 \end{figure}
 \begin{itemize}
@@ -25,14 +25,6 @@ Below picture shows main idea of GitHub flow itself
     After release complete \texttt{master} branch cherry-picks~\cite{CherryPick} from it.
     \item \textbf{Hotfix} -- branch that contains critical bug fix.
     It is used to patch production environment and must be released as quick as possible.
-%    \item \textbf{Hotfix} -- branch is created from the latest deployed unit where error occurs,
-%    for example \texttt{release/v*} branch.
-%    Hotfixes are not stick to releases, they may be necessary in any deployed unit like DEV, QA environments,
-%    depends on where error occurs.
-%    This branch contains hotfix that should be deployed as soon as possible.
-%    In case of hotfix branch, release to be done directly from it.
-%    It means that after hotfix is finished new tag with patch increment to be created and pushed,
-%    triggering CI/CD and deployment of hotfix to production.
 \end{itemize}
 
 \subsection{Release process}
@@ -66,7 +58,7 @@ and we must release upcoming version, our steps to perform are:
 Entire release process is shown on the picture below
 \begin{figure}[H]
     \centering
-    \includegraphics[width=1\textwidth]{../img/GitLab_Flow}
+    \includegraphics[width=1\textwidth]{img/GitLab_Flow}
     ~\caption{GitLab Flow diagram~\cite{GitLabFlow}.}
 \end{figure}
 
