--- a/src/ReleaseFlowProposal.tex
+++ b/src/ReleaseFlowProposal.tex
@@ -14,9 +14,8 @@
 \emergencystretch=1em
 
 \newtheorem{thm}{Theorem}[section]
-\newtheorem{cor}[thm]{Corollary}
-\newtheorem{lem}[thm]{Lemma}
-\newtheorem{examp}[thm]{Example}
+\newtheorem{example}[thm]{Example}
+\newtheorem{definition}[thm]{Definition}
 
 \numberwithin{equation}{section}
 
