--- a/src/sections/introduction.tex
+++ b/src/sections/introduction.tex
@@ -5,8 +5,8 @@ and \texttt{Mainline} development~\cite{MainlineDevelopment}.
 Mainline development is also known as GitHub flow.
 Current document is motivated by Microsoft's
 \textit{Adopt a GIT branching strategy} available at~\cite{AdoptGitStrategy}.
-Below picture shows main idea of GitHub flow itself
-\input{sections/github-flow-diagram}
+The picture below shows the main idea of GitHub flow
+\input{sections/fig-github-flow-diagram}
 \begin{itemize}
     \item \textbf{Master} -- branch that contains tested, validated and verified code, ready to be released and deployed to production.
     \item \textbf{Feature} -- branch that contains implementation of a new feature according to sprint plan.
