--- a/src/sections/sub-hotfix-strategy.tex
+++ b/src/sections/sub-hotfix-strategy.tex
@@ -12,3 +12,4 @@ In order to release a hotfix the following set of steps to be executed:
     \item Release engineer creates and pushes new tag \texttt{v0.2.1}.
     \item Hotfix deployment process is started after new tag is pushed.
 \end{enumerate}
+\input{sections/fig-hotfix-strategy}
