--- a/src/sections/sub-release-process.tex
+++ b/src/sections/sub-release-process.tex
@@ -1,6 +1,6 @@
 ﻿Having all above, assume we have initial semantic version of our application as \texttt{v1.0.0},
 so that we must release upcoming version.
-The version \texttt{1.0.0} has been tested by QA team, so that release was approved by whole team.
+The version \texttt{v1.0.0} has been tested by QA team, so that release was approved by whole team.
 General release steps to perform are following
 \begin{enumerate}
     \item \textbf{Code phase.}
@@ -38,4 +38,4 @@ General release steps to perform are following
     \item Finally, the \texttt{Release/v*} branch is merged back to \texttt{master} after deployment is complete.
 \end{enumerate}
 Entire release process is shown on the picture below
-\input{sections/gitlab-flow-diagram}
+\input{sections/fig-release-flow-diagram}
