--- a/src/sections/sub-hotfix-strategy.tex
+++ b/src/sections/sub-hotfix-strategy.tex
@@ -1,15 +1,16 @@
-﻿Assume that our current released version of software product is \texttt{v0.2.0} and there is a critical bug appears.
-In order to release a hotfix the following set of steps to be executed:
+﻿Assume that our current released version of software product is \texttt{v1.0.0}
+and there is a critical bug appears.
+In order to release a hotfix the following set of steps to be performed
 \begin{enumerate}
     \item Hotfix to be assigned to a software engineer.
-    \item Software engineer fixes critical bug and creates a pull request: \texttt{hotfix/id -> master}.
-    Yes, pull request is done to the \texttt{master} branch.
-    \item Pull request \texttt{hotfix/id -> master} is reviewed by team and merged.
-    \item Release engineer cherry-picks~\cite{CherryPick} recently merged hotfix from the \texttt{master} branch
-    to the \texttt{release/v0.2.0} branch.
-    Note that branch \texttt{release/v0.2.0} is long-living and kept minimum until next release.
-    \item Release engineer increments patch part of semantic version, e.g \texttt{v0.2.0 -> v0.2.1}.
-    \item Release engineer creates and pushes new tag \texttt{v0.2.1}.
+    \item Software engineer creates a new branch \texttt{hotfix/*} from the latest \texttt{Release/v*} branch.
+    \item Software engineer fixes the bug in the \texttt{hotfix/*} branch.
+    \item Software engineer creates a pull request \texttt{hotfix/* -> release/v*}.
+    \item The pull request \texttt{hotfix/* -> release/v*} is reviewed by team and merged.
+    \item Release engineer creates a new tag \texttt{v1.0.1} from the latest \texttt{release/v*} branch.
     \item Hotfix deployment process is started after new tag is pushed.
+    \item Hotfix is deployed to production.
+    \item Release engineer creates a pull request \texttt{release/v* -> master} that contains the hotfix.
+    \item The pull request \texttt{release/v* -> master} is reviewed by team and merged.
 \end{enumerate}
 \input{sections/fig-hotfix-strategy}
