--- a/src/sections/sub-release-process.tex
+++ b/src/sections/sub-release-process.tex
@@ -26,7 +26,7 @@ General release steps to perform are following
         \item Push tag: \texttt{git push origin v1.0.0}
     \end{itemize}
     \item \textbf{Build phase.}
-    When new \texttt{TAG} is pushed to the remote repository, the build pipeline is being triggered~\cite{AzurePipelinesTriggers},
+    After new \texttt{TAG} is pushed to the remote repository, the build pipeline is being triggered~\cite{AzurePipelinesTriggers},
     initializing the build phase of DevOps cycle.
     Therefore, the code is being built, tested and specific artifacts are being created and published.
     \item \textbf{Release phase.} Release engineer validates the build artifacts,
