--- a/src/ReleaseFlowProposal.tex
+++ b/src/ReleaseFlowProposal.tex
@@ -26,8 +26,8 @@
 }
 
 
-\title[Release Flow Proposal]
-{Release Flow Proposal}
+\title[Software product Release flow: A proposal]
+{Software product Release flow: A proposal}
 \author[Petro Kolosov]{Petro Kolosov}
 \address{Software Developer, DevOps Engineer}
 \email{kolosovp94@gmail.com}
